@@ -92,6 +92,10 @@
    - stevesk@cvs.openbsd.org 2002/02/04 20:41:16
      [ssh-add.1]
      more sync for default ssh-add identities; ok markus@
+   - djm@cvs.openbsd.org 2002/02/04 21:53:12
+     [sftp.1 sftp.c]
+     Add "-P" option to directly connect to a local sftp-server. Should be 
+     useful for regression testing; ok markus@
 
 20020130
  - (djm) Delay PRNG seeding until we need it in ssh-keygen, from markus@
